--- a/2020/lecture_notes/tex/5_PT_2.tex
+++ b/2020/lecture_notes/tex/5_PT_2.tex
@@ -90,7 +90,7 @@ The concept of a \textit{reduced resolvent} arises when one considers an eigenva
 
 Suppose the eigenfunctions $\phi$ can be expanded in an orthonormal basis ($f_1$, $f_2$, $f_3$,...) such that $\sum_i c_i f_i $
 and let $\mathbf{A}_{ij} = \braket{f_i | A | f_j}$ be the matrix representation of the operator $A$ in this basis. 
-Suppose we divide the basis of the eigenstates into two partitions $p$ and $q$. 
+Suppose we divide the basis $f$ into two partitions $p$ and $q$. 
 If the $p$ partition is just a single basis function ($p: {f_1}$) (which we will just denote by the number 1) and the $q$ partition 
     is all other basis functions ($q: {f_2, f_3,...}$),
     one finds with some manipulation that the eigenvalues are defined by the relation 
