fixed energy subscrtip typo

--- a/2020/lecture_notes/tex/5_PT_2.tex
+++ b/2020/lecture_notes/tex/5_PT_2.tex
@@ -381,8 +381,8 @@ The third order contribution to the energy expression occurs for $n=1$ and is
 \[ E_0^{(3)} = \braket{\Phi_0 | V ( \Rz (V - E_0^{(1)})) \Rz V | \Phi_0} \]
 Alternatively, we could have also found the above by noting that generally the $(m+1)$ order energy is found
 by the $m$th order wavefunction,
-\[ E^{(m+1)} = \braket{\Phi_0 | V | \Phi_0^{(m)}} \]
-\[ E^{(3)} = \braket{\Phi_0 | V | \Phi_0^{(2)}} \]
+\[ E_0^{(m+1)} = \braket{\Phi_0 | V | \Phi_0^{(m)}} \]
+\[ E_0^{(3)} = \braket{\Phi_0 | V | \Phi_0^{(2)}} \]
 and just plug in our derived $\ket{\Phi_0^{(2)}}$.
 
 \section{The Energy Substitution Theorem}
