added first draft of coupled cluster notes

--- a/2020/lecture_notes/tex/6_CC.tex
+++ b/2020/lecture_notes/tex/6_CC.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage{amsmath,mathtools,amssymb}
+\usepackage{simplewick}
 \usepackage{graphicx}
 \usepackage{booktabs}
 \usepackage{blkarray}
@@ -12,6 +13,7 @@
 \usepackage{verbatim}
 \usepackage{cancel}
 \usepackage{xcolor}
+\newcommand{\fctr}{\contraction}
 \usepackage[margin=1.0in]{geometry}
 \newcommand{\ol}{\overline}
 \newcommand{\lp}{\left(}
@@ -20,7 +22,9 @@
 \newcommand{\lam}{\lambda}
 \newcommand{\h}{\circ}
 \newcommand{\p}{\bullet}
-
+\newcommand{\mc}{\mathcal}
+\newcommand{\mr}{\mathrm}
+\newcommand{\cd}{\cdots}
 \newcommand{\Ezero}{E^{(0)}}
 \newcommand{\Rz}{\mathcal{R}_{0}}
 
@@ -32,13 +36,14 @@
 
 \newcommand{\Ecorr}{E_{\mathrm{corr}}}
 \newcommand{\Ec}{E_{\mathrm{c}}}
+\newcommand{\Vc}{V_{\mathrm{c}}}
 \newcommand{\Hc}{H_{\mathrm{c}}}
 \newcommand{\dg}{\ensuremath{^\dagger} }
 \def\*#1{\mathbf{#1}}
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 
 \title{Lecture 6: Coupled Cluster Theory}
-\date{April 6, 2020}
+\date{April 13, 2020}
 \begin{document}
 \maketitle
 \noindent
@@ -76,6 +81,10 @@ $k$-electron excitation operators
 \[T = T_1 + T_2 + T_3 + \cdots \]
 \[T_k = \left(\frac{1}{k!}\right)^2 t_{a_1 \cdots a_k}^{i_1 \cdots i_k } \tilde{a}_{i_1 \cdots i_k}^{a_1 \cdots a_k } \]
 where $t_{a_1 \cdots a_k}^{i_1 \cdots i_k }$ are the coupled cluster \textit{amplitudes}.
+It is worth briefly pointing out some buried complexity here. Noting that the function $e^T$ can be expanded according to it's Taylor series, the full form of the coupled cluster wavefunction
+looks like the following, 
+\[ \ket{\Psi_{\mathrm{CC}}} = \left[ 1 + (T_1 + T_2 + T_3 + T_4 + \cdots ) + \frac{1}{2} (T_1 + T_2 + T_3 + T_4 + \cdots)^2 +  \frac{1}{6} (T_1 + T_2 + T_3 + T_4 + \cdots)^3 \cdots \right] \ket{\Phi}  \]
+
 Solving for the coupled cluster energy is done by doing the same thing we always do:
 project our reference determinant $\bra{\Phi}$ on the left of both sides 
 of the Schr{\"o}dinger equation.
@@ -91,20 +100,22 @@ where an equation involving $t_i^a$ would be obtained by projecting by $\bra{\Ph
 an equation for $t_{ij}^{ab}$ by projecting by $\bra{\Phi_{ij}^{ab}}$, and so on. 
 To see this, one can take the right side of the above equation and expand the exponential $\exp(T) = 1 + T + \frac{T^2}{2!} + \cdots $, and only one term survives:
 \[ \Ec \braket{\Phi_{i j \cdots }^{a b \cdots} | \exp(T) | \Phi} = \Ec t_{a b \cdots }^{i j \cdots}\]
-
-Plugging in the exponential expansion of $\exp(T)$ into the energy and amplitude equations 
+Plugging in the exponential expansion of $\exp(T)$ into the energy equation
 yields 
-\[ \braket{\Phi_{i j \cdots }^{a b \cdots} | \Hc | \Phi} + \braket{\Phi_{i j \cdots }^{a b \cdots}| \Hc T| \Phi} + \braket{\Phi_{i j \cdots }^{a b \cdots} | \Hc \frac{T^2}{2!} | \Phi} 
-   = \Ec t_{a b \cdots }^{i j \cdots}\]
 \[ \braket{\Phi | \Hc | \Phi} + \braket{\Phi| \Hc T| \Phi} + \braket{\Phi | \Hc \frac{T^2}{2!} | \Phi} = \Ec \]
+These terms are the only ones that survive because higher powers of $T$ contain no terms for 
+which one can obtain complete contractions. 
+An analgous equation exists for the amplitudes, but the powers of $T$ which
+survive will be dictated by the type of excitation of the determinant in the bra $\bra{\Phi_{i j \cdots }^{a b \cdots}}$, as this will influence the number of contractions one can make.
 
-These equations are not easily solvable. The trick used in traditional coupled cluster 
+These equations is not easily solvable. The trick used in traditional coupled cluster 
 theory to make these equations more workable is to multiply by $\exp(-T)$ on both sides,
 which effectively transforms our Hamiltonian $\bar{\Hc} = \exp(-T) H \exp(T)$.
+We highlight the key results in blue. 
 \[\braket{\Phi | \Hc | \Psi_{\mathrm{CC}}} = E_c \braket{\Phi|\Psi_{\mathrm{CC}}} \]
 \[ \braket{\Phi | \exp(-T) \Hc \exp(T) | \Phi } = E \braket{\Phi | \exp(-T) \exp(T) | \Phi} \]
 \[ \color{blue} \braket{\Phi | \exp(-T) \Hc \exp(T) | \Phi } = \Ec \]
-and 
+\quad
 \\
 \[ \braket{ \Phi_{i j \cdots }^{a b \cdots} | \Hc \exp(T) | \Phi} = 
     \Ec \braket{\Phi_{i j \cdots }^{a b \cdots} | \exp(T) | \Phi}  \]
@@ -119,37 +130,225 @@ This transformation decouples the amplitude equation from the energy equation
 by setting the right side of the amplitude equation to zero. 
 In the language of diagrams, this transformation removes ``disconnected'' diagrams,
 and $\Ec t_{ab \cdots}^{ij \cdots}$ is one example. 
+This transformation also can be simplified further via the \textit{Hausdorff expansion}.
 
-
-
-
-
-%TODO hausdorff
-%Our CC equations are infinite series due to the exponential form. 
-%However, at a given truncation of excitations (CCSD, CCSDT, CCSDTQ, ...),
-%the series always truncates to a finite number of terms, even though
-%each $T_1$, $T_2$, $T_3$ are infinite expansions.
-%
-%We can figure out how these series converge using the Hausdorf expansion. 
-The Hausdorff
-
-Accoridng to Wick's theorem, the commutators evaluate to (andreas prop 5.1)
-
-The only nonzero terms in the Hausdorff expansion are those
+\subsection{The Hausdorff Expansion}
+The Hausdorff expansion expresses our transformed Hamiltonian in
+terms of a sum over nested commutators. As we will see, upon simplification it produces 
+an expansion in powers of $T$ which naturally truncates, thus removing the infinite 
+expansion due to the exponential $\exp(T)$. 
+The Hausdorff expansion is,
+\[ \bar{\Hc} = \exp(-T) \Hc \exp(T) = \Hc + [\Hc,T] + \frac{1}{2!} [[\Hc,T],T] + 
+  \frac{1}{3!} [[[\Hc,T],T],T] +  \frac{1}{4!} [[[[\Hc,T],T],T],T] + \cdots   \]
+This is simplified by evaluating the commutators using Wick's theorem.
+Generally, if two strings of operators $Q$ and $Q'$ are normal ordered, 
+and one of them has an even operator count, then 
+\[ [Q, Q'] =  N[\fctr{}{Q}{}{Q} Q Q'] - N[\fctr{}{Q}{'}{Q} Q' Q ] \]
+In this specific case, 
+\[ [\Hc, T] = \Hc T - T\Hc = N[\Hc T] + N[\fctr{}{H}{{}_\mathrm{c}}{T}H_\mathrm{c}T]
+  - N[T \Hc] - N[\fctr{}{T}{}{H} T H_\mathrm{c}] \]
+\[ [\Hc, T] =  N[\fctr{}{H}{{}_\mathrm{c}}{T}H_\mathrm{c}T] - N[\fctr{}{T}{}{H} T H_\mathrm{c}] \]
+The second term above is actually 0, since $T$ is composed entirely 
+of quasi-particle creation operators, so any contraction of $T$ with something on the right
+will always be zero ($\dagger$'s on the right $\implies 0$). Therefore, we only have,
+\[ [\Hc, T] =  N[\fctr{}{H}{{}_\mathrm{c}}{T}H_\mathrm{c}T] \]
+This reasoning can be continued for nested commutations with $T$,
+and  we find that the only terms which survive are ones in which \textit{every single
+cluster operator $T$ is contracted with the Hamiltonian at least once}.
+\[
+  [\,\cdot\,,T]^n
+=
+N[
+  \fctr[1.5ex]{}{H}{{}_\mathrm{c}TT\cdots}{T}
+  \fctr[1.0ex]{}{H}{{}_\mathrm{c}T}{T}
+  \fctr[0.5ex]{}{H}{{}_\mathrm{c}}{T}
+  H_\mathrm{c} TT\cdots T
+]
+=
+  (H_\mathrm{c} T^n)_\mathrm{C}
+\]
+This naturally truncates the Hausdorff expansion, since the only nonzero 
+terms in the Hausdorff expansion are those
 in which the Hamiltonian has at least one contraction with every cluster
 operator on its right. 
-In the language of diagrams, this translates to the Hausdorff expansion 
-containing only \textit{connected} diagrams,
-so that $\bar{\Hc} = \exp(-T) \Hc \exp(T)$ can be evaluated as $\bar{\Hc} = (\Hc \exp(T))_{\mathrm{C}}$,
-where the subscript $\mathrm{C}$ denotes a restriction to connected diagrams.
+In the language of diagrams, we call these terms \textit{connected}, so we label them
+with a subscript capital C.
+\[\bar{\Hc} = (\Hc \exp(T))_{\mathrm{C}} = (\Hc + \Hc T + \frac{1}{2!} \Hc T^2 +
+  \frac{1}{3!} \Hc T^3 +  \frac{1}{4!} \Hc T^4)_{\mathrm{C}} \]
+This ends at the fourth power of $T$ because $\Hc$ is a linear combination of
+one-electron and two-electron operators, and these can contract with
+at most two and four $T$'s, respectively. 
+To convince yourself of this, you can write out the full form 
+of $T = T_1 + T_2 + T_3 + \cdots $, re-express each $T_k$ according to their
+definition, take various powers of the expansion $T^2, T^4, T^5$, 
+and try contracting with the Hamiltonian. 
+You will find that most terms in $T^4$ cannot be such that every $T$ forms a contraction
+with $\Hc$, and no terms in $T^5$ can have each cluster operator contract with $\Hc$.
+There isn't enough ``room'' in $\Hc$ for that many contractions.
 
-\[\bar{\Hc} = (\Hc \exp(T))_{\mathrm{C}} = (\Hc + \Hc T + \frac{1}{2!} \Hc T^2 + \frac{1}{3!} \Hc T^3 + \frac{1}{4!} \Hc T^4)_{\mathrm{C}}\]
-This expansion ends at $T^4$ because $\Hc$ consists of one and two-electron operators,
-which can contract with at most two and four $T$'s, where $T = T_1 + T_2 + \cdots$.
+To summarize, we initially replaced $\Hc \exp(T)$ in our energy and amplitude equations
+with $ \exp(-T) \Hc \exp(T)$. We then used the Hausdorff expansion, simplified,
+and found that it truncates at just connected terms, $\exp(-T) \Hc \exp(T) = (\Hc \exp(T))_{\mathrm{C}}$. This gives us our final results for the coupled cluster energy and amplitude equations, 
 
-This gives us our final results for the coupled cluster energy and amplitude equations,
-which only consist of ``connected'' diagrams, or in algebraic language, terms in which
-the Hamiltonian has a contraction with the cluster operators.
+\[\braket{\Phi |\Hc \exp(T) | \Phi }_\mathrm{C} = \Ec \]
+\[\braket{ \Phi_{i j \cdots }^{a b \cdots} |\Hc \exp(T) | \Phi}_\mathrm{C} 
+   =  0  \]
+Note that these are the same results as the equations previously derived (in blue),
+except we have used the result of the Hausdorff expansion to replace 
+ $\exp(-T) \Hc \exp(T)$ with just connected terms $(\Hc \exp(T))_{\mathrm{C}}$.
+Practically, when one uses the equations above algebraically, 
+one should look for complete contractions in which the Hamiltonian
+has at least one contraction with every cluster operator on its right.
+
+\subsection{Excitation Levels}
+There is an alternative to considering which terms form complete contractions when
+evaluating expectation values. 
+The \textit{excitation level} of a series of operators is equal 
+to the net number of particles or quasi-particles it creates, divided by 2.
+The excitation levels of $T_1$, $T_2$, and $T_3$ are 1, 2, and 3, 
+and $\tilde{a}_{abcd}^{ijkl}$, which would perhaps appear in a bra as
+$\bra{\Phi_{ijkl}^{abcd}}$, would have an excitation level of -4.
+\textbf{The total excitation level of a term in an expectation value must balance out
+to zero}, otherwise the term is zero. 
+Thus, this is another way of detecting which terms cannot form complete contractions.
+What is the excitation level of terms in our Hamiltonian $\Hc$?
+Excitation operators in the Hamiltonian are made up of general indices $p,q,r,s$ (not necessarily occupied or virtual), so the excitation level of the Hamiltonian is variable.
+The one-electron part of the Hamiltonian can have an excitation level of 0, +1, or -1. 
+The two-electron part of the Hamiltonian can have an excitation level of 0, +1 , -1, +2, or -2.  
+To see why, recall that the one-electron operator is $h_p^q \tilde{a}_q^p$, which
+can take on virtual and occupied indices in four ways: 
+$h_a^b \tilde{a}_b^a, h_a^i \tilde{a}_i^a, h_i^a \tilde{a}_a^i, h_i^j \tilde{a}_j^i$.
+In the $ h_a^i \tilde{a}_i^a$ case, it converts to two quasi-particle 
+creation operators $b_a^\dagger b_i^\dagger$. According to our definition of excitation
+level, this has an exciation level of +1. In the case of $ h_i^a \tilde{a}_a^i $,
+we have $b_i b_a $, two quasi-particle annihilation operators, so that the excitation
+level is -1. 
+The other two cases have excitation levels of 0.
+Similar arguments can be made for the two-electron cases involving $\tilde{a}_{rs}^{pq}$.
+
+By analyzing excitation levels, we can decide if expectation values are 0 or not.
+Examples,
+\begin{itemize}
+\item The following expectation value is nonzero. Each $T_1$ has an excitation
+level of +1, $\tilde{a}_{ab}^{ij}$ has an excitation level of -2, and the Hamiltonian
+excitation level can be chosen to be 0 so that 1 + 1 - 2 + 0 = 0.
+\[ \braket{\Phi_{ij}^{ab} | \Hc T_1^2 | \Phi} \] 
+\item The following expectation value is 0. $T_4$ has an excitation level of +4,
+$\tilde{a}_{a}^{i}$ has an excitation level of -1, and we can choose 
+the Hamiltonian to have an excitation level of -2, at best. -1 + -2 + 4 = 1.
+\[ \braket{\Phi_i^a | \Hc T_4 | \Phi} \] 
+\end{itemize}
+One could come up with similar conclusions by looking at what complete contractions
+can be formed, but it is often much faster to count excitation levels.
+
+In coupled cluster, we truncate our cluster operator at some level of excitation,
+and then perform the Hausdorff expansion to find which cluster operator terms
+to utilize in our expectation values. Analyzing what complete contractions survive 
+(or counting excitation levels) can then be used to filter the relevant terms terms even
+further. Finally, you can evaluate the expectation values either 
+    algebraically or diagrammatically.
+
+The utility of the Hausdorff expansion is the removal of terms which are ``disconnected'',
+(terms in the exponential expansion of $T$ for which a stray cluster operator is not contracted with $\Hc$ at least once).
+One could in theory skip 
+
+\subsection{The Amplitude Equations}
+The cleanest way to solve for the cluster amplitudes 
+in our amplitude equation 
+\[\braket{ \Phi_{i j \cdots }^{a b \cdots} |\Hc \exp(T) | \Phi}_\mathrm{C} = 0\]
+requires an odd-looking partitioning of our Hamiltonian 
+into two parts: the diagonal part of the Fock operator, and everything else. 
+\[H_0 = f_p^p \tilde{a}_p^p \]
+\[\Vc = \Hc - H_0 = f_p^q (1 - \delta_p^q) \tilde{a}_q^p + \frac{1}{4} \bar{g}_{pq}^{rs}
+ \tilde{a}_{rs}^{pq} \]
+$H_0$ can be absorbed into an excited determinant to give back
+a term which depends on the orbital energies,
+\begin{align}
+  H_0\Phi_{i_1\cd i_k}^{a_1\cd a_k}
+=
+  \mathcal{E}_{i_1\cd i_k}^{a_1\cd a_k}
+  \Phi_{i_1\cd i_k}^{a_1\cd a_k}
+&&
+  \mathcal{E}_{q_1\cd q_k}^{p_1\cd p_k}
+\equiv
+  \sum_{r=1}^k
+  f_{p_r}^{p_r}
+-
+  \sum_{r=1}^k
+  f_{q_r}^{q_r}
+\end{align}
+$\mathcal{E}_{i_1\cd i_k}^{a_1\cd a_k}$ is essentially the change 
+in the sum of the orbital energies from the reference state (Hartree-Fock) for the given 
+excited determinant. A single  
+$\mathcal{E}_{ij}^{ab}$ is $\mathcal{E}_{ij}^{ab} = \epsilon_a + \epsilon_b - \epsilon_i - \epsilon_j$. 
+Using the above equations in conjunction with our amplitude equations,
+\[\braket{ \Phi_{i j \cdots }^{a b \cdots} |\Hc \exp(T) | \Phi}_\mathrm{C} 
+   =  0  \]
+We plug in our partitioned Hamiltonian $\Hc = H_0 + \Vc$,
+\[\braket{ \Phi_{i j \cdots }^{a b \cdots} |H_0 \exp(T) | \Phi}_\mathrm{C} 
+ + \braket{ \Phi_{i j \cdots }^{a b \cdots} |\Vc \exp(T) | \Phi}_\mathrm{C}
+   =  0  \]
+The left term evalutes to 
+\[ \braket{ \Phi_{i j \cdots }^{a b \cdots} |H_0 \exp(T) | \Phi}_\mathrm{C} = 
+   \braket{ \Phi_{i j \cdots }^{a b \cdots} |H_0 T | \Phi} = 
+\mathcal{E}_{ij \cd}^{ab \cd} \braket{\Phi_{i j \cdots }^{a b \cdots} |T|\Phi} =
+\mathcal{E}_{ij \cd}^{ab \cd} t_{ab \cd}^{ij \cd} \]
+where we have used the fact that only $T$ in $\exp(T) = 1 + T + \frac{1}{2}T^2 \cdots $
+can create connected terms with $H_0$, since it is a one-electron operator.
+Now our amplitude equation reads as
+\[ \braket{ \Phi_{i j \cdots }^{a b \cdots} |\Vc \exp(T) | \Phi}_\mathrm{C}
+  + \mathcal{E}_{ij \cd}^{ab \cd} t_{ab \cd}^{ij \cd}   =  0  \]
+Since $\mathcal{E}_{ij \cd}^{ab \cd}$ is just a linear combination of orbital
+energies, we can absorb a minus sign by swapping upper and lower indices, $-\mathcal{E}_{ij \cd}^{ab \cd} = \mathcal{E}_{ab \cd}^{ij \cd}$,  which gives us the following 
+clean equation for solving for the amplitudes,  
+\[ t_{ab \cd}^{ij \cd} = \left(\mathcal{E}_{ab \cd}^{ij \cd}\right)^{-1} 
+        \braket{ \Phi_{i j \cdots }^{a b \cdots} |\Vc \exp(T) | \Phi}_\mathrm{C}  \]
+   
+The amplitude equations must be solved iteratively, since $t_{ab \cd}^{ij \cd}$ is
+also embedded in $\exp(T)$.
+
+\subsection{The CCSDTQ amplitude equations} 
+If we truncate the cluster operator $T = T_1 + T_2 + T_3 + T_4$,
+then $\exp(T) = \exp(T_1 + T_2 + T_3 + T_4)$. 
+Not every operator in the exponential expansion of $\exp(T_1 + T_2 + T_3 + T_4)$ 
+is relevant;
+disconnected terms are omitted, as well as terms for which the excitation level
+of the expectation value does not balance out to 0.
+After careful consideration, one can use the amplitude equation we derived above
+to obtain amplitude equations for CCSDTQ:
+\begin{align*}
+  t_a^i
+=& (\mc{E}_a^i)^{-1}
+  \braket{\Phi_i^a| V_\mr{c} (1 + T_1 + T_2 + T_3 + \tfrac{1}{2} T_1^2 +T_1T_2 + \tfrac{1}{3!} T_1^3)|\Phi}_\mr{C}
+\\[3pt]
+  t_{ab}^{ij} =& (\mc{E}_{ab}^{ij})^{-1}
+  \braket{\Phi_{ij}^{ab} | V_\mr{c} ( 1 + T_1 + T_2 +  T_3 + T_4 + \tfrac{1}{2}T_1^2 +  T_1T_2 +  T_1T_3 +  \tfrac{1}{2} T_2^2
+    + \tfrac{1}{3!} T_1^3 +  \tfrac{1}{2} T_1^2T_2 + \tfrac{1}{4!} T_1^4 ) | \Phi}_\mr{C} 
+\\[3pt] 
+  t_{abc}^{ijk}
+=& (\mc{E}_{abc}^{ijk})^{-1}
+  \bra{\Phi_{ijk}^{abc}} V_\mr{c}
+    (T_2 + T_3 + T_4 + T_1T_2 + T_1T_3 + \tfrac{1}{2} T_2^2 +T_1T_4 + T_2T_3 + \tfrac{1}{2}T_1^2T_2 + \tfrac{1}{2}T_1^2T_3 + \tfrac{1}{2}T_1T_2^2
+    + \tfrac{1}{3!}T_1^3T_2) \ket{\Phi}_\mr{C}
+\\[3pt]
+  t_{abcd}^{ijkl}
+=&
+  (\mc{E}_{abcd}^{ijkl})^{-1} \bra{\Phi_{ijkl}^{abcd}} V_\mr{c}
+    (T_3 + T_4 + T_1T_3 + \tfrac{1}{2} T_2^2 + T_1T_4 + T_2T_3 + T_2T_4 + \tfrac{1}{2} T_3^2 +
+      \tfrac{1}{2} T_1^2T_3  + \tfrac{1}{2} T_1T_2^2 + \tfrac{1}{2} T_1^2T_4
+\\
+&
+\hphantom{
+  (\mc{E}_{abcd}^{ijkl})^{-1}
+  \bra{\Phi_{ijkl}^{abcd}}
+    V_\mr{c}
+    (
+      T_3\
+ }
+    + T_1T_2T_3 + \tfrac{1}{3!} T_2^3 +\tfrac{1}{3!}T_1^3T_3 + \tfrac{1}{2!2!}T_1^2T_2^2)
+  \ket{\Phi}_\mr{C}
+\end{align*}
+
 
 \section{On the connection between Coupled Cluster and Configuration Interaction}
 Our CI wavefunction is  
@@ -203,6 +402,20 @@ To put it another way, in CCSD, we obtain some information about quadruple excit
 by considering two clusters which each doubly excite simultaneously. 
 Not only that, but CCSD is giving us quadruple excitation of relatively high importance,
 according to our physical argument earlier. 
+
+It is clear that CCSD is more accurate than CISD.
+However, coupled cluster gets even better at higher orders. 
+Looking at our expressions for $C_1, C_2, C_3, C_4$ above,
+we see that the majority of $C_4$ is made up of terms which 
+occur at CCSDT; expanding the CCSDT exponential 
+$\exp(T_1 + T_2 + T_3)$ will give you all of the terms in $C_4$ except 
+$T_4$ (!!!).
+Thus, CCSDT is wayyyy more accurate than CISDT, and it's even 
+almost as accurate correlation-wise as CISDTQ, since all that is missing is $T_4$.
+Nevermind the fact  that coupled cluster is size-consistent, which is 
+probably making up for more accuracy than the relative importance of $T_4$ in some cases.
+In this view, it is even proper to say that CCSDT is \textit{more} accurate than CISDTQ.
+
 
 \subsection{Deriving CC from CI}
 Starting from full-CI,
