--- a/2020/lecture_notes/tex/6_CC.tex
+++ b/2020/lecture_notes/tex/6_CC.tex
@@ -103,14 +103,13 @@ To see this, one can take the right side of the above equation and expand the ex
 Plugging in the exponential expansion of $\exp(T)$ into the energy equation
 yields 
 \[ \braket{\Phi | \Hc | \Phi} + \braket{\Phi| \Hc T| \Phi} + \braket{\Phi | \Hc \frac{T^2}{2!} | \Phi} = \Ec \]
-These terms are the only ones that survive because higher powers of $T$ contain no terms for 
-which one can obtain complete contractions. 
-An analgous equation exists for the amplitudes, but the powers of $T$ which
-survive will be dictated by the type of excitation of the determinant in the bra $\bra{\Phi_{i j \cdots }^{a b \cdots}}$, as this will influence the number of contractions one can make.
+These terms are the only ones that survive because higher powers of 
+$T$ contain no terms for which one can obtain complete contractions. 
+An analgous equation exists for the amplitudes.
 
 These equations is not easily solvable. The trick used in traditional coupled cluster 
 theory to make these equations more workable is to multiply by $\exp(-T)$ on both sides,
-which effectively transforms our Hamiltonian $\bar{\Hc} = \exp(-T) H \exp(T)$.
+which effectively transforms our Hamiltonian $\exp(-T) H \exp(T)$.
 We highlight the key results in blue. 
 \[\braket{\Phi | \Hc | \Psi_{\mathrm{CC}}} = E_c \braket{\Phi|\Psi_{\mathrm{CC}}} \]
 \[ \braket{\Phi | \exp(-T) \Hc \exp(T) | \Phi } = E \braket{\Phi | \exp(-T) \exp(T) | \Phi} \]
@@ -138,7 +137,7 @@ terms of a sum over nested commutators. As we will see, upon simplification it p
 an expansion in powers of $T$ which naturally truncates, thus removing the infinite 
 expansion due to the exponential $\exp(T)$. 
 The Hausdorff expansion is,
-\[ \bar{\Hc} = \exp(-T) \Hc \exp(T) = \Hc + [\Hc,T] + \frac{1}{2!} [[\Hc,T],T] + 
+\[ \exp(-T) \Hc \exp(T) = \Hc + [\Hc,T] + \frac{1}{2!} [[\Hc,T],T] + 
   \frac{1}{3!} [[[\Hc,T],T],T] +  \frac{1}{4!} [[[[\Hc,T],T],T],T] + \cdots   \]
 This is simplified by evaluating the commutators using Wick's theorem.
 Generally, if two strings of operators $Q$ and $Q'$ are normal ordered, 
@@ -148,13 +147,21 @@ In this specific case,
 \[ [\Hc, T] = \Hc T - T\Hc = N[\Hc T] + N[\fctr{}{H}{{}_\mathrm{c}}{T}H_\mathrm{c}T]
   - N[T \Hc] - N[\fctr{}{T}{}{H} T H_\mathrm{c}] \]
 \[ [\Hc, T] =  N[\fctr{}{H}{{}_\mathrm{c}}{T}H_\mathrm{c}T] - N[\fctr{}{T}{}{H} T H_\mathrm{c}] \]
-The second term above is actually 0, since $T$ is composed entirely 
-of quasi-particle creation operators, so any contraction of $T$ with something on the right
-will always be zero ($\dagger$'s on the right $\implies 0$). Therefore, we only have,
+The second term above is actually always 0, for any contraction.  
+The reason is that $T$ is composed entirely of quasi-particle creation operators, 
+which will be on the left for any possible contraction in $N[\fctr{}{T}{}{H} T H_\mathrm{c}]$.
+The only nonzero contraction involving quasi-particle operators occurs
+when the creation operator is on the \textit{right}, $ \fctr{}{b}{{}_q}{b} b_p b_q^\dagger = \delta_{pq} $.
+Therefore, any possible contraction $N[\fctr{}{T}{}{H} T H_\mathrm{c}]$ must always be zero. 
+We are left with the following, 
 \[ [\Hc, T] =  N[\fctr{}{H}{{}_\mathrm{c}}{T}H_\mathrm{c}T] \]
-This reasoning can be continued for nested commutations with $T$,
-and  we find that the only terms which survive are ones in which \textit{every single
+For the nested commutators in the Hausdorff expansion, 
+since $T$ has no contractions with operators to its right, 
+we find that the only terms which survive are ones in which \textit{every single
 cluster operator $T$ is contracted with the Hamiltonian at least once}.
+In the language of diagrams, we call these terms \textit{connected},
+since all excitation operators are connected to the Hamiltonian through a contraction.
+We label such terms with a subscript capital C.
 \[
   [\,\cdot\,,T]^n
 =
@@ -167,28 +174,29 @@ N[
 =
   (H_\mathrm{c} T^n)_\mathrm{C}
 \]
-This naturally truncates the Hausdorff expansion, since the only nonzero 
-terms in the Hausdorff expansion are those
-in which the Hamiltonian has at least one contraction with every cluster
-operator on its right. 
-In the language of diagrams, we call these terms \textit{connected}, so we label them
-with a subscript capital C.
-\[\bar{\Hc} = (\Hc \exp(T))_{\mathrm{C}} = (\Hc + \Hc T + \frac{1}{2!} \Hc T^2 +
+The restriction to only connected terms naturally eliminates many terms in the Hausdorff expansion. 
+Furthermore, since $\Hc$ is a linear combination of one-electron and two-electron operators, 
+    the components of $\Hc$ can contract with at most two and four $T$'s, respectively. 
+Since every $T$ has to be connected to $\Hc$, we are only left with, 
+connected terms up to the fourth power in $T$:
+\[ (\Hc \exp(T))_{\mathrm{C}} = (\Hc + \Hc T + \frac{1}{2!} \Hc T^2 +
   \frac{1}{3!} \Hc T^3 +  \frac{1}{4!} \Hc T^4)_{\mathrm{C}} \]
-This ends at the fourth power of $T$ because $\Hc$ is a linear combination of
-one-electron and two-electron operators, and these can contract with
-at most two and four $T$'s, respectively. 
 To convince yourself of this, you can write out the full form 
 of $T = T_1 + T_2 + T_3 + \cdots $, re-express each $T_k$ according to their
-definition, take various powers of the expansion $T^2, T^4, T^5$, 
-and try contracting with the Hamiltonian. 
-You will find that most terms in $T^4$ cannot be such that every $T$ forms a contraction
+definition, take various powers of the expansion $T^2, T^3, T^4, T^5$, 
+and try contracting a few terms with the Hamiltonian. 
+You will find that most terms in $T^4$ cannot be such that every $T_k$ forms a contraction
 with $\Hc$, and no terms in $T^5$ can have each cluster operator contract with $\Hc$.
 There isn't enough ``room'' in $\Hc$ for that many contractions.
 
 To summarize, we initially replaced $\Hc \exp(T)$ in our energy and amplitude equations
-with $ \exp(-T) \Hc \exp(T)$. We then used the Hausdorff expansion, simplified,
-and found that it truncates at just connected terms, $\exp(-T) \Hc \exp(T) = (\Hc \exp(T))_{\mathrm{C}}$. This gives us our final results for the coupled cluster energy and amplitude equations, 
+with $ \exp(-T) \Hc \exp(T)$. We then used the Hausdorff expansion.
+Upon simplifying, we found that $\exp(-T) \Hc \exp(T) = (\Hc \exp(T))_{\mathrm{C}}$.
+This tells us that only ``connected'' terms survive, 
+    and all disconnected terms necessarily cancel out. 
+Furthermore, our Hamiltonian only allows contractions with up to 4 $T$'s,
+so the Hausdorff expansion naturally truncates after $T^4$.
+This gives us our final results for the coupled cluster energy and amplitude equations, 
 
 \[\braket{\Phi |\Hc \exp(T) | \Phi }_\mathrm{C} = \Ec \]
 \[\braket{ \Phi_{i j \cdots }^{a b \cdots} |\Hc \exp(T) | \Phi}_\mathrm{C} 
@@ -205,8 +213,8 @@ There is an alternative to considering which terms form complete contractions wh
 evaluating expectation values. 
 The \textit{excitation level} of a series of operators is equal 
 to the net number of particles or quasi-particles it creates, divided by 2.
-The excitation levels of $T_1$, $T_2$, and $T_3$ are 1, 2, and 3, 
-and $\tilde{a}_{abcd}^{ijkl}$, which would perhaps appear in a bra as
+The excitation levels of $T_1$, $T_2$, and $T_3$ are 1, 2, and 3.
+$\tilde{a}_{abcd}^{ijkl}$, which would perhaps appear in a bra as
 $\bra{\Phi_{ijkl}^{abcd}}$, would have an excitation level of -4.
 \textbf{The total excitation level of a term in an expectation value must balance out
 to zero}, otherwise the term is zero. 
@@ -241,16 +249,15 @@ the Hamiltonian to have an excitation level of -2, at best. -1 + -2 + 4 = 1.
 One could come up with similar conclusions by looking at what complete contractions
 can be formed, but it is often much faster to count excitation levels.
 
-In coupled cluster, we truncate our cluster operator at some level of excitation,
-and then perform the Hausdorff expansion to find which cluster operator terms
-to utilize in our expectation values. Analyzing what complete contractions survive 
-(or counting excitation levels) can then be used to filter the relevant terms terms even
-further. Finally, you can evaluate the expectation values either 
-    algebraically or diagrammatically.
-
-The utility of the Hausdorff expansion is the removal of terms which are ``disconnected'',
-(terms in the exponential expansion of $T$ for which a stray cluster operator is not contracted with $\Hc$ at least once).
-One could in theory skip 
+When evaluating coupled cluster expectation values, if the excitation level 
+of a term is not 0, the term can be eliminated.
+However, just because the excitation level is 0 does not mean the term is automatically considered.
+From the Hausdorff expansion, we also must have that the Hamiltonian is connected to each
+cluster operator in a given term. If the excitation levels balance to zero and the Hamiltonian
+can be connected (contracted) to all cluster operators in the term, the term is nonzero.
+The following example has an excitation level of 0, but there is no way to connect $\Hc$ to the cluster
+operator $T_2$, so it goes to zero.
+\[\braket{\Phi_{ijkl}^{abcd}| \Hc T_2 | \Phi } \]
 
 \subsection{The Amplitude Equations}
 The cleanest way to solve for the cluster amplitudes 
@@ -400,7 +407,7 @@ This is why its called coupled cluster; higher order excitations
 of the scheme (CCSD) via \textit{coupling} two double excitations together.
 To put it another way, in CCSD, we obtain some information about quadruple excitations 
 by considering two clusters which each doubly excite simultaneously. 
-Not only that, but CCSD is giving us quadruple excitation of relatively high importance,
+Not only that, but CCSD is giving us a quadruple excitation of relatively high importance,
 according to our physical argument earlier. 
 
 It is clear that CCSD is more accurate than CISD.
@@ -410,7 +417,7 @@ we see that the majority of $C_4$ is made up of terms which
 occur at CCSDT; expanding the CCSDT exponential 
 $\exp(T_1 + T_2 + T_3)$ will give you all of the terms in $C_4$ except 
 $T_4$ (!!!).
-Thus, CCSDT is wayyyy more accurate than CISDT, and it's even 
+Thus, CCSDT is way more accurate than CISDT, and it's even 
 almost as accurate correlation-wise as CISDTQ, since all that is missing is $T_4$.
 Nevermind the fact  that coupled cluster is size-consistent, which is 
 probably making up for more accuracy than the relative importance of $T_4$ in some cases.
