fixed small indice typo

--- a/2020/lecture_notes/tex/4_CI.tex
+++ b/2020/lecture_notes/tex/4_CI.tex
@@ -225,7 +225,7 @@ Projection by $\Phi_{ij}^{ab}$
 \[\braket{\Phi_{ij}^{ab} |\Hc (1 + \frac{1}{4} c_{cd}^{kl} \tilde{a}_{kl}^{cd})| \Phi} 
           =  \Ecorr \frac{1}{4} c_{cd}^{kl} \braket{\Phi| \hat{P}_{(a/b)}^{(i/j)} \tilde{a}_{a \p b \p \p}^{i \h j \h \h}  \tilde{a}_{k \h l \h \h}^{c \p d \p \p} | \Phi} \]
 \[\braket{\Phi_{ij}^{ab} |\Hc (1 + \frac{1}{4} c_{cd}^{kl} \tilde{a}_{kl}^{cd})| \Phi} 
-          =  \Ecorr c_{cd}^{kl} \]
+          =  \Ecorr c_{ab}^{ij} \]
 \[\braket{\Phi_{ij}^{ab} |\Hc | \Phi } + \frac{1}{4} \braket{\Phi_{ij}^{ab}| \Hc | \Phi_{kl}^{cd}} c_{cd}^{kl}
           =  \Ecorr c_{ab}^{ij} \]
 
