--- a/2020/lecture_notes/tex/5_PT_1.tex
+++ b/2020/lecture_notes/tex/5_PT_1.tex
@@ -99,13 +99,12 @@ expansion of the energy levels and eigenstates of $H$ in terms of $\lam$:
 \[\ket{\Psi_i} =  \Phi_i^{(0)} +  \lam \Phi_i^{(1)} + \lam^2 \Phi_i^{(2)} + \cdots \]
 where each term is,  
 \[ E_i^{(k)} = \left. \frac{1}{k!} \frac{d^k E_i}{d \lam^k} \right\rvert_{\lam = 0} \]
-\[ \Psi_i^{(k)} = \left. \frac{1}{k!} \frac{d^k \ket{\Psi_i}}{d \lam^k} \right\rvert_{\lam = 0} \]
+\[ \Phi_i^{(k)} = \left. \frac{1}{k!} \frac{d^k \ket{\Psi_i}}{d \lam^k} \right\rvert_{\lam = 0} \]
 
 We call $E_i^{(0)}$ the 0$^{th}$ order energy, which is the energy of the simple system. 
 Every additional term in the energy expansion is the $n^{th}$ order energy correction, 
     and these are what we must solve for.
-Likewise terminology is used for the eigenstates $\ket{\Psi_i^{(k)}}$
-
+Likewise terminology is used for the eigenstate corrections $\ket{\Phi_i^{(k)}}$
 
 Many textbooks and other resources simply say $\lam$ is a 
     ``fictitious dummy parameter'' or ``book-keeping device'' that is 
