--- a/2020/lecture_notes/tex/5_PT_1.tex
+++ b/2020/lecture_notes/tex/5_PT_1.tex
@@ -148,12 +148,12 @@ You could also interpret this as us setting $\lam=1$, and fully ``turning on'' t
 We will assume henceforth that our reference state is normalized  $\braket{\Phizero_i | \Phizero_i} = 1$
 and our exact wavefunction is intermediately normalized $\braket{\Phizero_i | \Psi_i} = 1$.
 This yields,
-\[\braket{\Phizero_i | \Psi_i} = 1 = \braket{\Phizero_i | \Phizero_i} + \lam \braket{\Phizero_i \ \Phione_i} + \lam^2 \braket{\Phizero_i|\Phi_i^{(2)}} + \cdots \]
+\[\braket{\Phizero_i | \Psi_i} = 1 = \braket{\Phizero_i | \Phizero_i} + \lam \braket{\Phizero_i | \Phione_i} + \lam^2 \braket{\Phizero_i|\Phi_i^{(2)}} + \cdots \]
 In order for the above expression to be true for arbitrary $\lam$,
-it must be the case that $\braket{\Phizero_i | \Phi_i^{(k)} = 0 \mathrm{for k} = 1,2,3,...}$
+it must be the case that $\braket{\Phizero_i | \Phi_i^{(k)}} = 0 \space \mathrm{for} \space k = 1,2,3,...$
 
 We can now project each equation in our system of equations on the left by $\bra{\Phi_i^{(0)}}$.
-We can simplify quite a bit by noting $\braket{\Phizero_i | \Phi_i^{(k)} = 0 \mathrm{for k} = 1,2,3,...}$ 
+We can simplify quite a bit by noting $\braket{\Phizero_i | \Phi_i^{(k)}} = 0 \space \mathrm{for} \space k = 1,2,3,...$ 
 and that since $H_0$ is Hermitian, we can act it act on the left to give 
 $ \braket{\Phizero_i | H_0 | \Phi_n^{(k)}   } = \Ezero_i \braket{\Phizero_i | \Phi_i^{(k)}}  $.
 
