--- a/handouts/sections/hartree-fock.tex
+++ b/handouts/sections/hartree-fock.tex
@@ -38,7 +38,7 @@ The most accurate solution possible for a given atomic orbital (AO) basis set\fo
   \sum_\mu
   \F_\mu c_{\mu k}
 \end{align}
-in terms of all possible Slater determinants $\F_\mu$ that can be formed from an orthonormal one-electron basis of spin-orbitals, $\{\y_p\}$.
+in terms of all possible Slater determinants \index{Slater determinant} $\F_\mu$ that can be formed from an orthonormal one-electron basis of spin-orbitals, $\{\y_p\}$.
 The expansion coefficients $(\bo{c})_k=c_{\mu k}$ are eigenvectors of the matrix $(\bo{H})_{\mu\nu}=\ip{\F_\mu|\op{H}|\F_\nu}$, which is the matrix representation of the Hamiltonian in the determinant basis.
 This is called the \emph{full configuration-interaction} (FCI) solution.
 
