Add chapter on Hartree-Fock theory.

--- a/handouts/config/config.tex
+++ b/handouts/config/config.tex
@@ -9,6 +9,7 @@
 \usepackage[export]{adjustbox}
 \usepackage{amsmath}
 \usepackage{amsthm}
+\usepackage[toc,page]{appendix}
 \usepackage{array}
 \usepackage[USenglish]{babel}
 \usepackage{booktabs}
