--- a/handouts/config/qcmacros.sty
+++ b/handouts/config/qcmacros.sty
@@ -6,7 +6,7 @@
 \newcommand{\dg}{\ensuremath{^\dagger}}
 \newcommand{\tl}{\ensuremath{\tilde}}
 \newcommand{\ol}[1]{\ensuremath{\overline{#1}}}
-\newcommand{\op}[1]{\ensuremath{\hat{#1}}}
+\newcommand{\op}[1]{\ensuremath{\widehat{#1}}}
 \newcommand{\ord}[1]{\ensuremath{^{(#1)}}}
 \newcommand{\bord}[1]{\ensuremath{^{[#1]}}}
 \newcommand{\br}[1]{\ensuremath{\langle#1|}\xspace}
