Add first stub Roothaan-Hall Pople-Nesbet.

--- a/handouts/handouts.tex
+++ b/handouts/handouts.tex
@@ -42,6 +42,7 @@ headings=normal,
 \pagestyle{maincontentstyle} 	% fancy header and footer
 
 \include{\SectionsPath/hartree-fock}
+\include{\SectionsPath/roothaan-hall-pople-nesbet}
 
 \begin{appendices}
 	\include{\SectionsPath/constrained-optimization}
