Bugfix goldstone. Add chapters up to diagrams.

--- a/handouts/config/avcthm.sty
+++ b/handouts/config/avcthm.sty
@@ -12,7 +12,7 @@
 \declaretheoremstyle[
   spaceabove=5pt,
   spacebelow=5pt,
-  bodyfont=\small\setlength{\abovedisplayskip}{\fam@skip}\setlength{\belowdisplayskip}{\fam@skip}
+  %bodyfont=\small\setlength{\abovedisplayskip}{\fam@skip}\setlength{\belowdisplayskip}{\fam@skip}
 ]{avc}
 \theoremstyle{avc}
 \newtheorem{dfn} {Definition} [\fam@numberby]
