--- a/handouts/config/goldstone.sty
+++ b/handouts/config/goldstone.sty
@@ -195,6 +195,7 @@
                                  (current bounding box.north west);
 }
 \newcommand{\frameit}[1]{
+  \providecommand\do{}
   \renewcommand*{\do}[1]{
     \ifstrequal{##1}{top}{
       \def\applypadding{}
