--- a/handouts/handouts.tex
+++ b/handouts/handouts.tex
@@ -43,12 +43,17 @@ headings=normal,
 
 \include{\SectionsPath/hartree-fock}
 \include{\SectionsPath/roothaan-hall-pople-nesbet}
+\include{\SectionsPath/second-quantization}
+\include{\SectionsPath/wicks-theorem}
+\include{\SectionsPath/kutzelnigg-mukherjee}
+\include{\SectionsPath/diagrams}
 
 \begin{appendices}
 	\include{\SectionsPath/constrained-optimization}
 	\include{\SectionsPath/functional-derivatives}
 	\include{\SectionsPath/fundamental-lemma-calculus-variations}
 	\include{\SectionsPath/unitary-invariances-hf-orbitals}
+	\include{\SectionsPath/pull-through-relation}
 \end{appendices}
 
 %\backmatter
