Add coupled cluster chapter. Add title page.

--- a/handouts/handouts.tex
+++ b/handouts/handouts.tex
@@ -27,9 +27,15 @@ headings=normal,
 
 \input{\ConfigPath/config.tex}
 
+\title{\Huge CHEM 8950}
+\subtitle{\Large Advanced Quantum Chemistry \\ Handouts}
+\date{}
+
 \begin{document}
 
 \dominitoc
+
+\maketitle
 
 \pagenumbering{roman}			% roman page numbing (invisible for empty page style)
 \pagestyle{plain}				% no header or footers
@@ -47,6 +53,8 @@ headings=normal,
 \include{\SectionsPath/wicks-theorem}
 \include{\SectionsPath/kutzelnigg-mukherjee}
 \include{\SectionsPath/diagrams}
+\include{\SectionsPath/coupled-cluster}
+
 
 \begin{appendices}
 	\include{\SectionsPath/constrained-optimization}
