--- a/handouts/sections/kutzelnigg-mukherjee.tex
+++ b/handouts/sections/kutzelnigg-mukherjee.tex
@@ -1,5 +1,7 @@
 \chapter{Kutzelnigg-Mukherjee tensor notation}
 
+\minitoc
+
 \begin{ntt}\label{ntt:kutzelnigg-mukherjee-notation}
 \thmtitle{Kutzelnigg-Mukherjee tensor notation}
 In \textit{Kutzelnigg-Mukherjee (KM) tensor notation}, creation operators are denoted using superscripts, $a^p\equiv a_p\dg$.
