--- a/handouts/sections/roothaan-hall-pople-nesbet.tex
+++ b/handouts/sections/roothaan-hall-pople-nesbet.tex
@@ -1,5 +1,7 @@
 \chapter{The Roothaan-Hall and Pople-Nesbet equations}
 
+\minitoc
+
 \section{Spin and spin-orbitals}
 
 A spin-orbital $\y$ can be expressed as $\y(\bo{r},s)=\f(\bo{r})\w(s)$, where $\f(\bo{r})$ is a spatial orbital and $\w(s)$ is a spin function.
