--- a/handouts/sections/wicks-theorem.tex
+++ b/handouts/sections/wicks-theorem.tex
@@ -1,5 +1,7 @@
 \chapter{Wick's theorem}
 
+\minitoc
+
 \begin{dfn}
 \thmtitle{Normal ordering}
 The \textit{normal ordering} of a string $q_1\cd q_n$ of particle-hole operators is the mapping $q_1\cd q_n\mapsto\no{q_1\cd q_n}\equiv\e_{\pi}q_{\pi(1)}\cd q_{\pi(n)}$ where $\pi\in\mr{S}_n$ is a permutation that puts the string in normal order.
