--- a/handouts/sections/second-quantization.tex
+++ b/handouts/sections/second-quantization.tex
@@ -1,5 +1,7 @@
 \chapter{Second Quantization}
 
+\minitoc
+
 \begin{dfn}\label{dfn:slater-determinant}
 \thmtitle{Slater determinant}
 A \textit{Slater determinant} is a normalized antisymmetric product of spin-orbitals
